# hyuabot-subway-timetable-updater

./: .dockerignore  .gitignore  .python-version  Dockerfile  main.py  requirements.txt  setup.cfg
.github/workflows/: default.yml  deploy.yml
models/: subway.py
scripts/: timetable.py
src/: __init__.py  main.py  models.py
src/scripts/: timetable.py
src/utils/: database.py
tests/: insert_subway_information.py  test_subway_data.py
utils/: database.py
