[metadata]
name = hyuabot-subway_timetable-updater
version = attr: src.__version__
description = HYUabot Subway Timetable Updater
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hyuabot-developers
author = Jeongin Lee
author_email = jil8885@hanyang.ac.kr
license = GPLv3
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.13
project_urls =
    Source = https://github.com/jil8885/hyuabot-subway-timetable-updater
    Tracker = https://github.com/jil8885/hyuabot-subway-timetable-updater/issues

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.13
setup_requires =
    setuptools>=60.2.0
    wheel>=0.37.1
install_requires =
    SQLAlchemy>=2.0.29
    aiohttp>=3.9.3
    psycopg2-binary>=2.9.9
zip_safe = false
include_package_data = true

[options.extras_require]
dev =
lint =
    flake8>=7.0.0
typecheck =
    mypy>=1.9.0
    sqlalchemy[mypy]>=2.0.29
test =
    pytest>=7.2.0
    pytest-asyncio>=0.20.2
[mypy]
plugins = sqlalchemy.ext.mypy.plugin
ignore_missing_imports = true
mypy_path = src
namespace_packages = true
explicit_package_bases = true

[options.packages.find]
where = src
include = *

[flake8]
# ref: http://pep8.readthedocs.io/en/latest/intro.html#error-codes
ignore = E126,E127,E129,E221,E241,E722,E731,E401,W503,W504,N801,N802
max-line-length = 120
builtins = _
exclude = .git,.cache,.idea,.egg,__pycache__,venv,build,docs,alembic

[tool:pytest]
testpaths = tests
filterwarnings =
    ignore::DeprecationWarning:aioredis.*:

[yapf]
based_on_style = facebook
spaces_before_comment = 2
column_limit = 120
blank_line_before_nested_class_or_def = true